@@ -24,7 +24,7 @@
 
 require '../include/ispcp-lib.php';
 
-check_login(__FILE__);
+check_login(__FILE__, Config::get('PREVENT_EXTERNAL_LOGIN_RESELLER'));
 
 $theme_color = Config::get('USER_INITIAL_THEME');
 
