@@ -1,6 +1,10 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-04-12 Thomas Häber
+	- GUI:
+		* added GUI settings to enable/disable login from external source/website seperated for admin/reseller/client
+
 2009-04-11 Thomas Häber
 	- GUI:
 		* Fixed #1788: captcha fontfile not found (with new implemented font loading and LGPL fonts)
